# iolanta-tables

./: .gitignore  README.md  iolanta_tables_facets.py  macros.py  mkdocs.yml  pyproject.toml
docs/: .pages  File.md  facets.yaml  index.md  render.md  title.md  url.md
docs/facets/: bool.md
docs/keywords/: id.md  index.md  type.md
docs/project/: mkdocs-iolanta-roadmap.yaml
docs/samples/: arda-countries.yaml  jedi.yaml  self.yaml  several-planets.yaml  simple.yaml  star-trek-characters-ordered-desc.yaml  star-trek-characters-ordered-nullable.yaml  star-trek-characters-ordered.yaml  star-trek-characters.yaml
docs/tables/: .pages  class.md  columns.md  direction.md  empty-values.md  index.md  install.md  order-by.md  rows.md  self.md
iolanta_tables/: __init__.py  mkdocs_plugin.py  models.py  plugin.py
iolanta_tables/data/: context.yaml  iolanta-tables.yaml
mkdocs_iolanta_tables/: models.py  plugin.py
mkdocs_iolanta_tables/facets/: __init__.py  base.py  body_class.py  body_rows.py  errors.py  header.py  models.py  queries.py  row.py  self.py  table.py
tests/: conftest.py  test_bool.py  test_data.py  test_nested_columns.py  test_order_by.py  test_order_class.py
tests/bool/: test_bool.py
tests/class/: test_class.py
tests/column-title/: test_title.py
tests/context-json/: test_context_json.py
tests/data/: bool.yaml  class.yaml  column-title.yaml  invalid.yaml  order-class.yaml  order.yaml  self-without-class.yaml  space in filename.yaml  space-in-property.yaml  url.yaml
tests/date/: test_date.py
tests/description-column/: test_description.py
(+54 files in other folders)
