[tool.poetry]
name = "iolanta-tables"
version = "0.1.0"
description = "Linked Data as tables"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "iolanta_tables"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
iolanta = "^0.1.3"
dominate = "^2.7.0"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
